--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,33 @@
 body {
-    padding: 0;
     margin: 0;
+    height: 100vh;
+}
+
+#content {
+    display: flex;
+    flex-flow: column;
+    height: 100vh;
 }
 
 #menu {
-    min-height: 50px;
+    height: 50px;
     width: 100%;
     background-color: #dfdfdf;
+    flex: 0 1 auto;
+}
+
+#blockly-container {
+    flex: 1 1 auto;
+    width: 100%;
+}
+
+#blockly-div {
+    position: absolute;
 }
 
 .menu_button {
-    min-height: 50px;
-    margin: 20px;
+    height: 30px;
+    width: 30px;
+    margin: 10px;
+    font-size: larger;
 }
