--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,29 @@ body {
     height: 100vh;
 }
 
+#content-full {
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+}
+
+#carousel {
+    flex: 1 1 auto;
+}
+
+#carousel-inner1 {
+    height: 100%;
+}
+
+#carousel-item1 {
+    margin: 0;
+    height: 100%;
+}
+
 #content {
     display: flex;
     flex-flow: column;
-    height: 100vh;
+    height: 100%;
     z-index: 10;
 }
 
@@ -24,19 +43,6 @@ body {
     margin-left: auto;
 }
 
-#image-popup {
-    display: flex;
-    height: 90%;
-    width: 90%;
-    /*border-color: #C0C0C0;*/
-    /*border-width: 1px;*/
-    /*border-style: solid;*/
-    position: absolute;
-    z-index: 100;
-    pointer-events: none;
-    visibility: hidden;
-}
-
 #builton_img {
     width: auto;
     height: auto;
@@ -45,6 +51,13 @@ body {
     max-width: 10vh;
     right: 1%;
     bottom: 1%;
+}
+
+#build-content {
+    flex: 1 1 auto;
+    height: 100%;
+    bottom: 1%;
+    top: 1%;
 }
 
 #close-button {
@@ -61,7 +74,7 @@ body {
     height: 50px;
     width: 100%;
     background-color: #dfdfdf;
-    flex: 0 1 auto;
+    /*flex: 0 1 auto;*/
     display: flex;
     flex-flow: row;
     align-items: center;
