--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 
 #carousel {
     flex: 1 1 auto;
+    max-height: calc(100vh - 50px);
 }
 
 #carousel-inner1 {
@@ -29,7 +30,6 @@ body {
     z-index: 10;
 }
 
-
 #blockly-container {
     flex: 1 1 auto;
     width: 100%;
@@ -41,6 +41,17 @@ body {
 
 #run {
     margin-left: auto;
+}
+
+
+#webcam-carousel-video {
+    display: flex;
+    flex-flow: column;
+}
+
+#webcam-ui-button {
+    width: 100%;
+    flex: 0 0 auto;
 }
 
 #builton_img {
@@ -55,13 +66,51 @@ body {
 
 #build-content {
     flex: 1 1 auto;
-    height: 100%;
+    display: flex;
+    flex-direction: row;
+    max-height: 100%;
     bottom: 1%;
     top: 1%;
 }
 
+#build-carousel {
+    display: flex;
+    height: 100%;
+    max-height: 100%;
+}
+
+#enable-cam-predict {
+    flex: 0 0 0;
+}
+
+#status {
+    margin: 1%;
+    display: flex;
+    flex-direction: column;
+}
+
 #close-button {
     margin-left: auto;
+}
+
+#predict-body {
+    display: flex;
+    flex-direction: column;
+}
+
+/*#image-webcam-container {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
+
+.build-card {
+    flex: 1 1 50%;
+    max-height: 100%;
+}
+
+.webcam {
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .menu-button {
@@ -80,29 +129,62 @@ body {
     align-items: center;
 }
 
-.image-div {
-    height: 100%;
-    width: 100%;
-    position: relative;
-    background-color: #ffffff;
-    flex: 0 1 auto;
-    display: flex;
-    flex-flow: row;
-    align-items: center;
+.image-list {
+    align-items: start;
+    list-style-type: none;
 }
 
-.image {
-    height: 100%;
-    width: 100%;
+.image-cont {
+    max-height: 100px;
+    max-width: 100px;
+    object-fit: contain;
+}
+
+.image-item  {
+    float: left;
+    max-height: 100px;
+    max-width: 100px;
+    margin: 5px;
+}
+
+.accordion-collapse {
+    min-height: 120px;
+}
+
+.accordion-item {
+    display: flex;
+    flex-direction: column;
+}
+
+.accordion-image-body {
+    display: flex;
+    flex-direction: column;
     background-color: #ffffff;
-    align-items: center;
+}
+
+.image-div {
+    max-height: 100px;
+    max-width: 100px;
+    display: flex;
 }
 
 .delete-button {
-    height: 75px;
-    width: 75px;
+    max-width: 20px;
+    max-height: 20px;
+    margin: 0;
     position: absolute;
-    top: 1%;
-    right: 1%;
-    visibility: hidden;
+    object-fit: cover;
+    padding: 0;
+}
+
+.image-delete {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    object-fit: cover;
+    padding: 0;
+}
+
+.webcam-ui-button {
+    flex: 1 1 auto;
 }
